test/data/semantic-errors/variable-identifier-declared-more-than-once.boozie
let beer = "Blue Moon"
let beer = "Shock Top"
